--- a/Anykernel/init.spectrum.rc
+++ b/Anykernel/init.spectrum.rc
@@ -3,6 +3,10 @@
 # Implimentation inspired by Franco's fku profiles
 
 # Initialization
+
+on post-fs
+    setprop ro.sys.sdcardfs true
+
 on property:sys.boot_completed=1
     # Set default profile on first boot
     exec u:r:init:s0 root root -- /init.spectrum.sh
@@ -10,12 +14,14 @@ on property:sys.boot_completed=1
     # Enable Spectrum support
     setprop spectrum.support 1
     # Add kernel name
-    setprop ro.m-kernel.version v3.7
     setprop persist.spectrum.kernel M-Kernel
 
 # According to Qcom this legacy value improves first launch latencies
 # Stock value is 512k
     setprop dalvik.vm.heapminfree 2m
+
+# Disable Gentle Fair Sleepers
+    write /sys/kernel/sched/gentle_fair_sleepers 0
 
 # Disable some wakelocks
     write /sys/module/wakeup/parameters/enable_wlan_rx_wake_ws 0
@@ -27,58 +33,113 @@ on property:sys.boot_completed=1
     write /sys/module/wakeup/parameters/enable_ipa_ws 0
     write /sys/module/wakeup/parameters/enable_timerfd_ws 0
 
-# Interactive governor
-    write /sys/devices/system/cpu/cpufreq/interactive/go_hispeed_load 95
-    write /sys/devices/system/cpu/cpufreq/interactive/above_hispeed_delay "20000 806400:50000 1036800:50000 1401600:50000"
-    write /sys/devices/system/cpu/cpufreq/interactive/timer_rate 80000
-    write /sys/devices/system/cpu/cpufreq/interactive/hispeed_freq 1036800
-    write /sys/devices/system/cpu/cpufreq/interactive/timer_slack 30000
-    write /sys/devices/system/cpu/cpufreq/interactive/target_loads "40 400457:20 652800:30 806400:38 1036800:45 1209600:52 1401600:60 1689600:67 1804800:72 1958400:79 2016000:85 2150400:91 2208000:95"
-    write /sys/devices/system/cpu/cpufreq/interactive/min_sample_time 50000
-    write /sys/devices/system/cpu/cpufreq/interactive/ignore_hispeed_on_notif 0
-    write /sys/devices/system/cpu/cpufreq/interactive/boost 0
-    write /sys/devices/system/cpu/cpufreq/interactive/align_windows 1
-    write /sys/devices/system/cpu/cpufreq/interactive/use_migration_notif 1
-    write /sys/devices/system/cpu/cpufreq/interactive/use_sched_load 0
-    write /sys/devices/system/cpu/cpufreq/interactive/max_freq_hysteresis 0
-    write /sys/devices/system/cpu/cpufreq/interactive/boostpulse_duration 0
+# Start Power tweaks
+    exec u:r:init:s0 root root -- /init.special_power.sh
+    exec u:r:su:s0 root root -- /init.special_power.sh
 
-# Disable Touchboost
+### Interactive governor-specific settings
+    write /sys/devices/system/cpu/cpufreq/interactive/above_hispeed_delay 0
+    write /sys/devices/system/cpu/cpufreq/interactive/boost 0
+    write /sys/devices/system/cpu/cpufreq/interactive/boostpulse_duration 0
+    write /sys/devices/system/cpu/cpufreq/interactive/ignore_hispeed_on_notif 0
+    write /sys/devices/system/cpu/cpufreq/interactive/max_freq_hysteresis 0
+    write /sys/devices/system/cpu/cpufreq/interactive/use_migration_notif 0
+    write /sys/devices/system/cpu/cpufreq/interactive/use_sched_load 0
+    write /sys/devices/system/cpu/cpufreq/interactive/target_loads "1 400457:25 652800:37 806400:44 1036800:50 1209600:55 1401600:60 1689600:67 1804800:72 1958400:79 2016000:85 2150400:91 2208000:95"
+    write /sys/devices/system/cpu/cpufreq/interactive/align_windows 1
+    write /sys/devices/system/cpu/cpufreq/interactive/enable_prediction 1
+    write /sys/devices/system/cpu/cpufreq/interactive/fast_ramp_down 1
+    write /sys/devices/system/cpu/cpufreq/interactive/powersave_bias 1
+    write /sys/devices/system/cpu/cpufreq/interactive/screen_off_maxfreq 1036800
+    write /sys/devices/system/cpu/cpufreq/interactive/timer_slack 30000
+    write /sys/devices/system/cpu/cpufreq/interactive/min_sample_time 50000
+    write /sys/devices/system/cpu/cpufreq/interactive/hispeed_freq 652800
+    write /sys/devices/system/cpu/cpufreq/interactive/timer_rate 80000
+    write /sys/devices/system/cpu/cpufreq/interactive/go_hispeed_load 95
+
+# Disable touchboost
     write /sys/module/msm_performance/parameters/touchboost 0
+
+# Fingerprint boost
+    write /sys/kernel/fp_boost/enabled 1
 
 # Min/Max backlight values
     write /sys/module/mdss_fb/parameters/backlight_min 0
     write /sys/module/mdss_fb/parameters/backlight_max 255
 
+# Scheduler tweaks
+    write /proc/sys/kernel/sched_upmigrate_min_nice 8
+    write /proc/sys/kernel/sched_upmigrate 98
+    write /proc/sys/kernel/sched_downmigrate 85
+
+### CPU_Boost
+    write /sys/module/cpu_boost/parameters/input_boost_enabled 0
+    write /sys/module/cpu_boost/parameters/input_boost_freq "0:1036800 1:1036800 2:0 3:0 4:0 5:0 6:0 7:0"
+    write /sys/module/cpu_boost/parameters/boost_ms 0
+    write /sys/module/cpu_boost/parameters/input_boost_ms 40
+    write /sys/module/cpu_boost/parameters/migration_load_threshold 15
+    write /sys/module/cpu_boost/parameters/sync_threshold 0
+    write /sys/module/cpu_boost/parameters/load_based_syncs N
+    write /sys/module/cpu_boost/parameters/shed_boost_on_input N
+
+# Temporary
+    write /sys/module/msm_thermal/core_control/enabled 0
+
+# Congigure Simple Thermal driver
+#    write /sys/kernel/msm_thermal/zone0 "1555200 1536000 40 38"
+#    write /sys/kernel/msm_thermal/zone1 "1478400 1536000 41 40"
+#    write /sys/kernel/msm_thermal/zone2 "1478400 1440000 42 41"
+#    write /sys/kernel/msm_thermal/zone3 "1344000 1440000 43 42"
+#    write /sys/kernel/msm_thermal/zone4 "1344000 1344000 44 43"
+#    write /sys/kernel/msm_thermal/zone5 "1248000 1344000 46 44"
+#    write /sys/kernel/msm_thermal/zone6 "960000 1248000 48 46"
+#    write /sys/kernel/msm_thermal/zone7 "960000 960000 53 50"
+#    write /sys/kernel/msm_thermal/zone8 "768000 768000 65 60"
+#    write /sys/kernel/msm_thermal/sampling_ms 8000
+#    write /sys/kernel/msm_thermal/enabled 0
+
 # Balance (default profile)
 on property:persist.spectrum.profile=0
     write /sys/module/autosmp/parameters/enabled 0
-    sleep 3
+    sleep 1
     write /sys/module/autosmp/parameters/enabled 1
     write /sys/class/leds/lcd-backlight/max_brightness 255
     write /sys/kernel/autosmp/conf/cycle_down 1
+    write /sys/module/adreno_idler/parameters/adreno_idler_active 1
+    write /sys/module/adreno_idler/parameters/adreno_idler_downdifferential 20
+    write /sys/module/adreno_idler/parameters/adreno_idler_idlewait 20
+    write /sys/module/adreno_idler/parameters/adreno_idler_idleworkload 6000
 
 # Performance
 on property:persist.spectrum.profile=1
     write /sys/module/autosmp/parameters/enabled 0
-    sleep 3
+    sleep 1
     write /sys/module/autosmp/parameters/enabled 1
     write /sys/class/leds/lcd-backlight/max_brightness 255
     write /sys/kernel/autosmp/conf/cycle_down 2
+    write /sys/module/adreno_idler/parameters/adreno_idler_active 1
+    write /sys/module/adreno_idler/parameters/adreno_idler_downdifferential 20
+    write /sys/module/adreno_idler/parameters/adreno_idler_idlewait 25
+    write /sys/module/adreno_idler/parameters/adreno_idler_idleworkload 5000
 
 # Battery
 on property:persist.spectrum.profile=2
     write /sys/module/autosmp/parameters/enabled 0
-    sleep 3
+    sleep 1
     write /sys/module/autosmp/parameters/enabled 1
     write /sys/class/leds/lcd-backlight/max_brightness 100
     write /sys/kernel/autosmp/conf/cycle_down 1
+    write /sys/module/adreno_idler/parameters/adreno_idler_active 1
+    write /sys/module/adreno_idler/parameters/adreno_idler_downdifferential 25
+    write /sys/module/adreno_idler/parameters/adreno_idler_idlewait 10
+    write /sys/module/adreno_idler/parameters/adreno_idler_idleworkload 8000
 
 # Gaming
 on property:persist.spectrum.profile=3
     write /sys/module/autosmp/parameters/enabled 0
-    sleep 3
+    sleep 1
     write /sys/module/autosmp/parameters/enabled 1
     write /sys/class/leds/lcd-backlight/max_brightness 255
     write /sys/kernel/autosmp/conf/cycle_down 2
+    write /sys/module/adreno_idler/parameters/adreno_idler_active 0
 
