--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.70 Kernel Configuration
+# Linux/arm64 3.18.72-rc1 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -440,6 +440,7 @@ CONFIG_CMA_AREAS=7
 CONFIG_ZSWAP=y
 CONFIG_ZPOOL=y
 CONFIG_ZBUD=y
+# CONFIG_Z3FOLD is not set
 CONFIG_ZSMALLOC=y
 # CONFIG_PGTABLE_MAPPING is not set
 # CONFIG_ZSMALLOC_STAT is not set
@@ -4498,4 +4499,3 @@ CONFIG_QMI_ENCDEC=y
 # CONFIG_NONE_HOTPLUG is not set
 CONFIG_ASMP=y
 # CONFIG_LAZYPLUG is not set
-
