--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.78 Kernel Configuration
+# Linux/arm64 3.18.79 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -295,7 +295,7 @@ CONFIG_BLOCK_COMPAT=y
 #
 CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_TEST is not set
-CONFIG_IOSCHED_DEADLINE=y
+# CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_FIOPS=y
@@ -307,12 +307,12 @@ CONFIG_IOSCHED_ZEN=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_MAPLE is not set
-# CONFIG_DEFAULT_BFQ is not set
+CONFIG_DEFAULT_BFQ=y
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_SIOPLUS=y
+# CONFIG_DEFAULT_SIOPLUS is not set
 # CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_ZEN is not set
-CONFIG_DEFAULT_IOSCHED="sioplus"
+CONFIG_DEFAULT_IOSCHED="bfq"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
@@ -557,7 +557,7 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_ELECTRON is not set
 CONFIG_CPU_BOOST=y
 CONFIG_FINGERPRINT_BOOST=y
-CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
+# CONFIG_CPU_FREQ_GOV_BLU_ACTIVE is not set
 
 #
 # ARM CPU frequency scaling drivers
