--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -540,6 +540,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVEX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_RELAXED is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CHILL is not set
@@ -556,6 +557,7 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_NEBULA=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
 # CONFIG_CPUFREQ_DT is not set
+CONFIG_CPU_FREQ_GOV_CONSERVATIVEX=y
 # CONFIG_CPU_FREQ_GOV_RELAXED is not set
 # CONFIG_CPU_FREQ_GOV_ELECTRON is not set
 CONFIG_CPU_BOOST=y
